Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/platform-ui-skin/src/main/webapp/skin/less/Oauth/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/Oauth/Style.less
@@ -235,7 +235,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 				text-align: center;
             }
             .rememberTxt {
-                color: #999999;
+                color: #767676;
                 font-size: 13px;
                 font-weight: bold;
             }
