--- a/platform-ui-skin/src/main/webapp/skin/less/component/UIPage/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/component/UIPage/Style.less
@@ -32,7 +32,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
   .content {
     margin: 50px auto auto;
     .disabled {
-      color: #999999;
+      color: #767676;
       margin: 15px 0 20px;
     }
     .uiIconWarning {
