--- a/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UIUserNavigationPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/portlets/platformNavigation/UIUserNavigationPortlet/Style.less
@@ -176,7 +176,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
       }
       .uiIconUserInvisible,
       .uiIconUserOffline {
-        color: #999999;
+        color: #767676;
       }
       .uiIconUserAway {
         color: #fd8c40;
@@ -319,7 +319,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
           margin-right: 0px;
         }
         .btn {
-          color: #999999;
+          color: #767676;
           padding: 4px 13px;
           span {
             display: none;
