--- a/platform-ui-skin/src/main/webapp/skin/less/platform/skin/enterprise.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/platform/skin/enterprise.less
@@ -2076,7 +2076,7 @@ p, .postContent, .uiWikiContentDisplay{
   .activityStream .heading {
     margin-left: 70px ~'; /** orientation=lt */ ';
     margin-right: 70px ~'; /** orientation=rt */ ';
-    color: #999999;
+    color: #767676;
     .actionLink {
       position: absolute;
       top: 0;
@@ -2326,7 +2326,7 @@ p, .postContent, .uiWikiContentDisplay{
 
 .uiIconClock:before {
   font-size: 12px;
-  color: #999999;
+  color: #767676;
 }
 
 .avatarCircle img {
@@ -3475,7 +3475,7 @@ li > a > .uiIconRefresh:before {
         background-color:#f89406 !important;
       }
       .chat-status-invisible {
-        background-color:#999999 !important;
+        background-color:#767676 !important;
       }
     }
   }
@@ -3495,7 +3495,7 @@ li > a > .uiIconRefresh:before {
 }
 .uiProfileMenu .profileMenuNav .profileMenuApps .chat-status-invisible,
 .uiSpaceMenu .spaceMenuNavHeader .spaceMenuApps .chat-status-invisible {
-  background-color:#999999 !important;
+  background-color:#767676 !important;
 }
 
 
