--- a/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiSpaceMenuPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiSpaceMenuPortlet/Style.less
@@ -267,7 +267,7 @@ Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
           margin-right: 0px;
         }
         .btn {
-          color: #999999;
+          color: #767676;
           padding: 4px 13px;
           span {
             display: none;
