--- a/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiUserPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiUserPortlet/Style.less
@@ -94,7 +94,7 @@ td.right-column-containerTDContainer {
         color: #2ec24d;
 	}
 	.uiIconUserInvisible, .uiIconUserOffline { 
-       color:#999999;
+       color:#767676;
 	}
 	.uiIconUserAway {
         color:#fd8c40;
